# Program-Design-2

./: .gitmodules  README.md
HW2/src/: CodeGenerator.java
HW2/src/Syntax/Token/: Ident.java  PeekableReader.java  PeekableTokenizerTest.java  Span.java  TokenizerTest.java
HW2/src/Syntax/Tree/: DiagramTest.java  PropertyEntry.java  Statment.java  StatmentTest.java  TypeDeclare.java  TypeDeclareTest.java
HW2/src/Syntax/Tree/Property/: ArgumentTest.java  Method.java  Property.java  PropertyTest.java  Value.java  Visibility.java
final-design/: judger.gaphor  readme.md
final/candidate-1/: design.gaphor  iteration-1.md  journal.md  requirement.md
final/candidate-2/: requirement.md
final/docs/: component diagram.gaphor
hw1/src/: Main.java  RegExp.java
hw1/src/Solvers/: ContainSolver.java  ContainSolverTest.java  DuplicateSolver.java  DuplicateSolverTest.java  PalindromeSolver.java  PalindromeSolverTest.java  Solver.java
hw2/: CodeGenerator.java  Company.java  Department.java  Employee.java  Payment.java  Product.java  ShoppingCart.java  readme.md
hw2/src/: CodeGenerator.java  Main.java
hw2/src/Syntax/: Exportable.java  PropertyList.java
hw2/src/Syntax/Token/: IdentBuilder.java  PeekableTokenizer.java  Tokenizer.java
hw2/src/Syntax/Tree/: Diagram.java  PropertyEntryTest.java
hw2/src/Syntax/Tree/Property/: Argument.java  MethodTest.java
hw3/: output.csv
hw3/HW3/: pom.xml
hw3/HW3/src/main/java/org/example/: Data.java  HtmlParser.java  Main.java
hw3/HW3/src/test/java/org/example/: DataTest.java
hw4/: trie_TrieSys.h
hw4-rs/: Cargo.toml  justfile  output.txt
hw4-rs/.cargo/: config.toml
hw4-rs/src/: doc.rs  main.rs  token.rs  tree.rs
hw4/src/: Document.java  Documents.java  Main.java  TFIDFCalculator.java  Tokenizer.java
hw4/src/trie/: Trie.java  TrieSys.java  TrieTest.java
hw4/trie/: Cargo.toml  justfile
hw4/trie/src/: lib.rs  tree.rs  vec_tree.rs
hw5/: .gitignore  README.md  embed_dylib.js  justfile
hw5-rs/: embed_dylib.js
hw5-rs/hw5/: Cargo.toml  Indexer.h
hw5-rs/hw5/src/: doc.rs  float.rs  index.rs  lib.rs  search.rs  token.rs
hw5-rs/src/: Indexer.java
hw5-rs/submit/: Indexer.java  output.txt
hw5/hw5/: .gitignore  Cargo.toml  Indexer.h  output.txt
hw5/hw5/.cargo/: config.toml
hw5/hw5/benches/: search.rs
hw5/hw5/src/: doc.rs  float.rs  index.rs  lib.rs  main.rs  search.rs  string.rs  token.rs
hw5/hw5/test/: corpus1.txt  tc1.txt
hw5/src/: BuildIndex.java  Indexer.java  IndexerTest.java  Main.java  TFIDFSearch.java
hw5/src/Index/: Document.java  Documents.java  Tree.java
hw5/src/Search/: InputParser.java  Request.java
hw5/src/Tree/: Bincode.java  Node.java  UnarchivedTree.java
hw5/submit/: Indexer.java
