[package]
name = "hw5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"

[lib]
crate_type = ["cdylib"]

[dependencies]
fdlibm-rs = "0.1.0"
jni = "0.21.1"
memmap = "0.7.0"
rayon = "1.10.0"

[dependencies.ordered-float]
version = "4.2.0"
features = ["rkyv"]

[dependencies.rkyv]
version = "0.7.44"
features = ["validation","archive_le"]
