[package]
name = "hw5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 's'
panic = "abort"
strip = "symbols"

[lib]
crate_type = ["cdylib"]

[dependencies]
jni = "0.21.1"
memmap = "0.7.0"
rayon = "1.10.0"

[dependencies.rkyv]
version = "0.7.44"
features = ["archive_le", "validation"]
